# JengaAI

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MILESTONES.md  Makefile  OVERVIEW.md  PLAN.md  PRODUCT_CHECKLIST.md  README.MD  README.md  TECHNICAL_ROADMAP.md  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 066dafdff992_create_users_table.py  06913de992a7_add_password_resets_table.py  1be3db4d7a53_add_datasets_table.py  2bcea31434fb_add_avatar_url_to_users.py  2d8136cb2241_add_datasets_table.py  5d7767260412_add_avatar_url_to_users.py  9b7426eee04a_add_is_verified_to_users_add_email_.py  d4409dee94d1_add_avatar_url_to_users.py
backend/app/: config.py  main.py
backend/app/core/: database.py  deps.py  rate_limit.py  security.py
backend/app/models/: __init__.py  dataset.py  email_verification.py  password_reset.py  user.py
backend/app/schemas/: auth.py  (+2 more)
configs/: README.md  llm_finetuning.yaml  multi_task_3way_fusion.yaml  multi_task_classification.yaml  qa_scoring.yaml
data/: sample_instructions.jsonl
docker/: docker-compose.yml
docs/: abstract.md  sprint.md
examples/: run_experiment.py  run_llm_finetuning.py  run_qa_training.py
fixtures/: sample_classification.jsonl  sample_qa_transcripts.jsonl  sample_sentiment.jsonl
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
jenga_ai/: __init__.py  __main__.py  cli.py
jenga_ai/core/: __init__.py  config.py  fusion.py  model.py
jenga_ai/data/: __init__.py  collators.py  pii.py  processor.py
jenga_ai/export/: __init__.py  local_package.py  notebook_generator.py  runpod_launcher.py
jenga_ai/inference/: __init__.py
jenga_ai/llm/: __init__.py  config.py  data.py  model_factory.py  trainer.py
jenga_ai/models/: __init__.py
jenga_ai/security/: __init__.py  adversarial.py  audit.py  explainability.py  hitl.py
jenga_ai/tasks/: __init__.py  base.py  classification.py  ner.py  qa.py  registry.py  regression.py  sentiment.py
jenga_ai/training/: __init__.py  callbacks.py  continual.py  curriculum.py  metrics.py  regularization.py  trainer.py
jenga_ai/utils/: __init__.py  device.py  logging.py
(+103 files in other folders)
